fix: responsiveness on smaller devices

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -53,3 +53,9 @@ p {
 	text-wrap: wrap;
 	line-height: 1.4;
 }
+
+@media (max-width: 400px) {
+	h1 {
+		font-size: 5.25em;
+	}
+}
